[package]
name = "plane-noisy"
version = "0.0.1"
edition = "2018"

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.11.0", features = ["full"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
structopt = "0.3.23"
scrapers-lib = { git = "https://github.com/brother-wolf/scrapers-lib", tag = "v0.0.3" }